--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
